# bachelor-diploma

./: README.md
bash_scripts/: diploma_cmd  launch_bt  launch_system_actor_custom  launch_system_my_world_1  launch_system_my_world_1_actor  launch_system_my_world_2_boxes  launch_system_one_random_box  launch_system_random_boxes  launch_system_tb3_dynamic_world  launch_system_tb3_house  launch_system_tb3_my_world_2_actors  save_map_script.sh
collision_maps/: map_updated.yaml.pgm  map_updated.yaml.yaml
diploma_ws/: bt_battery_trace.fbl  bt_imu_trace.fbl  bt_lidar_trace.fbl  bt_main_trace.fbl  bt_odom_trace.fbl  bt_sensors_trace.fbl  cool_map_1.pgm  cool_map_1.yaml  generated_log.btlog
diploma_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
diploma_ws/install/bsu/share/bsu/: package.bash  (+4 more)
diploma_ws/install/bt/share/bt/: package.bash  package.dsv  package.ps1  package.sh  package.xml
diploma_ws/install/bt/share/bt/cmake/: btConfig.cmake
diploma_ws/install/bt/share/bt/launch/: battery_bt.launch.py
diploma_ws/install/bt/share/bt/resources/: lidar_bt.xml  main_bt.xml
diploma_ws/log/: latest_build  latest_list
diploma_ws/src/actor_collisions/: actor_collisions.world
diploma_ws/src/bsu/: CMakeLists.txt
diploma_ws/src/bt/: CMakeLists.txt  package.xml
diploma_ws/src/bt/launch/: imu_bt.launch.py  lidar_bt.launch.py  main_bt.launch.py  odom_bt.launch.py
diploma_ws/src/bt/resources/: battery_bt.xml  imu_bt.xml  main_bt.xml  odom_bt.xml  path_bt.xml
diploma_ws/src/bt/src/: imu_bt.cpp  main_bt.cpp  odom_bt.cpp  sensors_bt.cpp
diploma_ws/src/costmap_to_dynamic_obstacles/: CMakeLists.txt  package.xml
diploma_ws/src/costmap_to_dynamic_obstacles/src/: costmap_converter_node.cpp  costmap_to_dynamic_obstacles.cpp
diploma_ws/src/csu/: CMakeLists.txt
diploma_ws/src/csu/src/: control_switching_unit.cpp
diploma_ws/src/dms_interfaces/: CMakeLists.txt  package.xml
diploma_ws/src/dms_interfaces/msg/: ObstacleArray.msg
diploma_ws/src/dms_interfaces/srv/: GetPose.srv
diploma_ws/src/dsu/launch/: data_storage_unit.launch.py
diploma_ws/src/dsu/src/: data_storage_unit.cpp
diploma_ws/src/fsu/src/: imu_remapping_node.cpp  lidar_remapping_node.cpp
diploma_ws/src/gppu/: CMakeLists.txt
diploma_ws/src/gppu/include/gppu/: goal_pose_publisher_unit_2.hpp
diploma_ws/src/install/: local_setup.sh  setup.sh
diploma_ws/src/kf_hungarian_tracker/: setup.py
diploma_ws/src/kf_hungarian_tracker/kf_hungarian_tracker/: kf_hungarian_node.py
diploma_ws/src/log/: latest_build
diploma_ws/src/nav2_bringup/launch/: navigation_launch.py
diploma_ws/src/nav2_costmap_2d/: CMakeLists.txt  package.xml
diploma_ws/src/nav2_costmap_2d/src/: costmap_2d_ros.cpp  layered_costmap.cpp
diploma_ws/src/nav2_gradient_costmap_plugin/src/: gradient_layer.cpp
diploma_ws/src/nspu/: CMakeLists.txt  package.xml
diploma_ws/src/nspu/include/nspu/: navigation_services_provider_unit.hpp
diploma_ws/src/nspu/launch/: navigation_services_provider_unit.launch.py
diploma_ws/src/nspu/src/: navigation_services_provider_unit.cpp
diploma_ws/src/ssu/launch/: sensor_supervisitory_unit.launch.py
diploma_ws/src/turtlebot3_gazebo/launch/: tb3_actor_custom.launch.py  tb3_my_world_1_actor.launch.py  tb3_one_random_box.launch.py
diploma_ws/src/turtlebot3_gazebo/worlds/: actor_custom.world  dynamic_obstacles.world  my_world_1_actor.world  one_random_box.world  turtlebot3_house.world
diploma_ws/src/turtlebot3_navigation2/param/: waffle_pi.yaml
launch_bash_scripts/: diploma_cmd  launch_bt  launch_dyn_obs  launch_my_world_1  launch_system  launch_system_dyn_world  launch_system_house
maps/: dyn_obs.pgm  dyn_obs.yaml  house.yaml  my_world_1.pgm  my_world_1.yaml  my_world_2.pgm  my_world_2.yaml
source_code/dyn_obs_avoid_system_ws/src/kf_hungarian_tracker/: package.xml
source_code/dyn_obs_avoid_system_ws/src/nav2_gradient_costmap_plugin/: CMakeLists.txt  package.xml
source_code/nav2_ws/src/nav2_costmap_2d/: CMakeLists.txt  package.xml
source_code/supervisory_system_ws/src/bsu/: package.xml
source_code/supervisory_system_ws/src/bt/: CMakeLists.txt  package.xml
source_code/supervisory_system_ws/src/bt/include/bt/: battery_check.hpp  full_stop.hpp  global_planner_restart.hpp  imu_restart.hpp  odom_check.hpp  odom_restart.hpp  orientation_check.hpp  path_possibility_check.hpp  reset_map.hpp  save_map.hpp  set_odom_failure_state.hpp  update_map.hpp
source_code/supervisory_system_ws/src/bt/launch/: collision_bt.launch.py  global_planner.launch.py  path_bt.launch.py  sensors_bt.launch.py
source_code/supervisory_system_ws/src/bt/resources/: collision_bt.xml  imu_bt.xml  lidar_bt.xml  main_bt.xml  odom_bt.xml  sensors_bt.xml
source_code/supervisory_system_ws/src/bt/src/: battery_bt.cpp  collision_bt.cpp  lidar_bt.cpp  path_bt.cpp
source_code/supervisory_system_ws/src/dms_interfaces/: CMakeLists.txt
source_code/supervisory_system_ws/src/dsu/: CMakeLists.txt  package.xml
source_code/supervisory_system_ws/src/fsu/: CMakeLists.txt  package.xml
source_code/supervisory_system_ws/src/gppu/: package.xml
source_code/supervisory_system_ws/src/nspu/: CMakeLists.txt
source_code/supervisory_system_ws/src/ssu/: CMakeLists.txt  package.xml
source_code/supervisory_system_ws/src/ssu/src/: sensor_supervisitory_unit.cpp
system_evaluation/dyn_obs_system/: launch_system  rviz.rviz
system_evaluation/supervisory_system/: launch_bt  launch_system  plot_cmd_vel.py  plotting_speed.perspective  simple_sub.py  test_supervisory_system.rviz
thesis_files/: plot_testing_res.py
thesis_files/diagrams/: Untitled Diagram(1).drawio  Untitled Diagram(2).drawio  Untitled Diagram(3).drawio  Untitled Diagram(4).drawio  Untitled Diagram.drawio  arch_w_dms.drawio  arch_wo_dms.drawio  bt_main.drawio  mics_diagrams.drawio
thesis_files/images/: mina_tree_for_vis_diploma
thesis_files/latex_files/: 0_main.tex  1_title.tex  2_intro.tex  3_chap1.tex  4_chap2.tex  5_chap3.tex  6_chap4.tex  7_chap5.tex  abbriviations.tex  biba.bib  definitions.tex
thesis_files/presentation/: presentation_text.docx
(+233 files in other folders)
